# Monitoring

./: .codecov.yml  .gitignore  .travis.yml  1-Basic_8cxx.html  1-Basic_8cxx.js  1-Basic_8cxx__incl.dot  1-Basic_8cxx__incl.map  1-Basic_8cxx__incl.md5  10-Buffering_8cxx.html  10-Buffering_8cxx.js  10-Buffering_8cxx__incl.dot  10-Buffering_8cxx__incl.map  10-Buffering_8cxx__incl.md5  2-TaggedMetrics_8cxx.html  2-TaggedMetrics_8cxx.js  2-TaggedMetrics_8cxx__incl.dot  2-TaggedMetrics_8cxx__incl.map  2-TaggedMetrics_8cxx__incl.md5  4-RateDerivedMetric_8cxx.html  4-RateDerivedMetric_8cxx.js  4-RateDerivedMetric_8cxx__incl.dot  4-RateDerivedMetric_8cxx__incl.map  4-RateDerivedMetric_8cxx__incl.md5  5-Benchmark_8cxx.html  5-Benchmark_8cxx.js  5-Benchmark_8cxx__incl.dot  5-Benchmark_8cxx__incl.map  5-Benchmark_8cxx__incl.md5  6-Increment_8cxx.html  6-Increment_8cxx.js  6-Increment_8cxx__incl.dot  6-Increment_8cxx__incl.map  6-Increment_8cxx__incl.md5  8-DbFiller_8cxx.html  8-DbFiller_8cxx.js  8-DbFiller_8cxx__incl.dot  8-DbFiller_8cxx__incl.map  8-DbFiller_8cxx__incl.md5  ApMonBackend_8cxx.html  ApMonBackend_8cxx.js  (+499 more)
.github/workflows/: build.yml  compile.yml  format.yml  release.yml
CMake/: FindAPMON.cmake
apps/: CMakeLists.txt
apps/samplecollector/: CMakeLists.txt  main.cxx
build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_dir/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_dir/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  documentation-config.doxygen
build_dir/doc/html/: DataCollector_8cxx.html  DataCollector_8cxx__incl.map  DataCollector_8cxx__incl.md5  DataCollector_8h.html  DataCollector_8h__dep__incl.map  DataCollector_8h__dep__incl.md5  (+66 more)
build_dir/lib/: libDataCollector.so.0.0.0
build_dir/libs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: CPackConfig.cmake  FindAPMON.cmake  FindApMon.cmake  FindConfiguration.cmake  MonitoringConfig.cmake  MonitoringConfig.cmake.in  MonitoringDependencies.cmake
config/: Monitoring.cfg  apmon.conf  ml.properties  ml_env  myFarm.conf
doc/: CMakeLists.txt  DPL.md  README.MonALISA  collectd.md  documentation-config.doxygen.in  influxdb.md  system-implementation-new.md  system-implementation.md  user-guide.dox  welcome.dox
docs/: collectd.md  doxyfile.in  doxygen.md  flume.md  grafana.md  influxdb.md  system-implementation.md
examples/: 1-Basic.cxx  10-Buffering.cxx  11-AutoUpdate.cxx  11-KafkaToWebsocket.cxx  12-KafkaToInfluxDb.cxx  13-PullClient.cxx  14-OrbitId.cxx  15-ODC.cxx  16-AliECS.cxx  2-TaggedMetrics.cxx  2-UserDefinedEntity.cxx  3-UserDefinedTimestamp.cxx  3-Verbosity.cxx  4-RateDerivedMetric.cxx  5-Benchmark.cxx  5-MonitorAdditionalPid.cxx  6-Benchmark.cxx  6-DedicatedInstance.cxx  6-Increment.cxx  7-InternalBenchamrk.cxx  7-InternalBenchmark.cxx  7-Latency.cxx  8-DbFiller.cxx  8-KafkaToHttpServer.cxx  8-Multiple.cxx  9-AutoUpdate.cxx  9-ProcessMonitoring.cxx  9-RunNumber.cxx  9-Timer.cxx  CMakeLists.txt  ExampleBoilerplate.cxx  SampleConfig.ini  config-default.ini  example.ini  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
examples/helpers/: HttpConnection.h
include/: CMakeLists.txt
include/Monitoring/: ApMonBackend.h  Backend.h  Collector.h  ComplexMetric.h  DataCollector.h  DataCollectorApMon.h  DataCollectorInterface.h  DerivedMetrics.h  FileNotFoundException.h  InfluxBackend.h  InfoLoggerBackend.h  Metric.h  MonInfoLogger.h  Monitoring.h  MonitoringFactory.h  ProcessMonitor.h  PullClient.h  StdoutBackend.h  Tag.h  Tags.h  TemplatedMetric.h  Version.h.in
libs/: CMakeLists.txt
libs/Core/: CMakeLists.txt  DataCollector.cxx  DataCollector.h  FileNotFoundException.h  Version.cxx  Version.h.in
proto/: envs.proto
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_1.js  files_10.js  files_6.js  (+36 more)
src/: ApMonBackend.cpp  ApMonBackend.cxx  ApMonBackend.h  Backend.h  CMakeLists.txt  Collector.cpp  Collector.cxx  ComplexMetric.cxx  DataCollector.cxx  DataCollectorApMon.cxx  DerivedMetrics.cpp  DerivedMetrics.cxx  InfluxBackend.cpp  InfluxBackend.cxx  InfluxBackend.h  InfluxBackendUDP.cxx  InfluxBackendUDP.h  InfoLoggerBackend.cpp  InfoLoggerBackend.cxx  InfoLoggerBackend.h  Metric.cpp  Metric.cxx  MonInfoLogger.h  MonLogger.h  Monitoring.cxx  MonitoringFactory.cxx  ProcessDetails.cxx  ProcessDetails.h  ProcessMonitor.cpp  ProcessMonitor.cxx  StdoutBackend.cpp  Tag.h  TemplatedMetric.cpp  VariantVisitorAdd.h  VariantVisitorRate.h  main.cxx  sampleCollectorApMon.cxx  sampleCollectorStdout.cxx
src/Backends/: ApMonBackend.cxx  ApMonBackend.h  Flume.cxx  Flume.h  InfluxDB.cxx  InfluxDB.h  InfoLoggerBackend.cxx  InfoLoggerBackend.h  Kafka.cxx  Kafka.h  Noop.h  StdOut.cxx  StdOut.h  Zabbix.cxx  Zabbix.h
src/Exceptions/: MonitoringException.cxx  MonitoringException.h  MonitoringInternalException.cxx  MonitoringInternalException.h
src/Transports/: HTTP.cxx  HTTP.h  Kafka.cxx  Kafka.h  KafkaConsumer.cxx  KafkaConsumer.h  KafkaProducer.cxx  KafkaProducer.h  StdOut.cxx  StdOut.h  TCP.cxx  TCP.h  TransportInterface.h  UDP.cxx  UDP.h  Unix.cxx  Unix.h  WebSocket.cxx  WebSocket.h
src/UriParser/: UriParser.h
test/: ApMon.conf  CMakeLists.txt  test.ini  testApMon.cxx  testCollector.cxx  testDerived.cxx  testFlume.cxx  testInfluxDb.cxx  testMetric.cxx  testMonitoring.cxx  testMonitoringFactory.cxx  testNoop.cxx  testProcessDetails.cxx  testProcessMonitor.cxx  testRegexMatch.cxx  testStdoutBackends.cxx  testTemplatedMetric.cxx  testThreads.cxx  testVerbosity.cxx  testZabbix.cxx
(+29 files in other folders)
