add_executable(Example1 example1.cpp)
target_link_libraries(Example1 DataCollector)

add_executable(Example2 example2.cpp)
target_link_libraries(Example2 DataCollector)

add_executable(Example3 example3.cpp)
target_link_libraries(Example3 DataCollector)

add_executable(Example4 example4.cpp)
target_link_libraries(Example4 DataCollector)

add_executable(Example5 example5.cpp)
target_link_libraries(Example5 DataCollector)

add_executable(Example6 example6.cpp)
target_link_libraries(Example6 DataCollector)
